# ebpf-blockchain

./: .gitignore  P2P_OBSERVABILITY_REPORT.md  README.md  RPC_DOCUMENTATION.md  ebpf-blockchain.yaml  lxc-install.md  planing.md  reference.md  rfc.md
.github/scripts/: test-pipeline.sh
.github/workflows/: ci-cd.yml  ci.yml
ansible/: README.md  ansible.cfg
ansible/inventory/: hosts.yml
ansible/playbooks/: backup.yml  deploy.yml  deploy_attacker.yml  deploy_cluster.yml  deploy_victim.yml  disaster_recovery.yml  factory_reset.yml  fix_network.yml  health_check.yml  rebuild_and_restart.yml  repair_and_restart.yml  rollback.yml  setup_dev_environment.yml  setup_ebpf_nodes.yml  validate_lab.yml  validate_network.yml
archive/: README.md
archive/legacy/: ARQUITECTURA.md  AUDIT_ANALYSIS.md  GUÍA-INSTALACIÓN.md  GUÍA-SEGURIDAD.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROYECTO-RESUMEN.md  RESOLUCION_LAB.md  planing.md
archive/plans/: CONSISTENCY_ANALYSIS.md  IMPLEMENTATION-PLAN-REFactoring.md  IMPLEMENTATION_PLAN.md  ansible-implementation-phases.md  ansible-implementation-plan.md  ansible-structure-restructure.md
archive/references/: ebpf-blockchain.yaml  rfc.md
archive/specs/: ETAPAS-INDEX.md  etapa1-specs.md  etapa2-specs.md  etapa3-specs.md  etapa4-specs.md  etapa5-specs.md
docs/: ANALISIS_PROFUNDO_SISTEMA.md  API.md  ARCHITECTURE-AUDIT-REPORT.md  ARCHITECTURE.md  COMPREHENSIVE-PROJECT-ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  EJERCICIOS.md  IAC-AUDIT-REPORT.md  LAB-GUIDE.md  LOG_COLLECTION_ANALYSIS.md  OPERATIONS.md  QUICKSTART.md  README.md  REFACTORING-CONSISTENCY-CHECK.md  TUTORIAL-AYA.md  ady-framework-architecture.md  ansible-structure-restructure.md  complete-refactoring-plan.md  core-migration.md  hot-reload-architecture.md  openapi.yml  refactoring-summary.md  ringbuf-migration.md
docs/adr/: 001-rust-implementation.md  002-consensus-algorithm.md  003-ebpf-for-security.md  004-rocksdb-storage.md  005-libp2p-networking.md  006-observability-stack.md
ebpf-blockchain/: README.md  docker-compose.yml  prometheus.yml
ebpf-blockchain/provisioning/: custom.ini
ebpf-node/: Cargo.toml  README.md  maps.d
ebpf-node/ebpf-node/: Cargo.toml  build.rs
ebpf-node/ebpf-node-common/: Cargo.toml
ebpf-node/ebpf-node-ebpf/: Cargo.toml  config.toml  rust-toolchain.toml
ebpf-node/ebpf-node-ebpf/src/: main.rs
ebpf-node/ebpf-node-ebpf/src/programs/: kprobes.rs  maps.rs  mod.rs  ringbuf.rs  xdp.rs
ebpf-node/ebpf-node/src/: main.rs
ebpf-node/ebpf-node/src/api/: blocks.rs  ebpf.rs  health.rs  metrics.rs  mod.rs  network.rs  node.rs  responses.rs  router.rs  rpc.rs  security.rs  transactions.rs  ws.rs
ebpf-node/ebpf-node/src/config/: cli.rs  node.rs
ebpf-node/ebpf-node/src/db/: backup.rs  mod.rs  rocksdb.rs
ebpf-node/ebpf-node/src/ebpf/: final_test.rs  hot_reload.rs  hot_reload_test.rs  loader.rs  maps.rs  metrics.rs  mod.rs  programs.rs
ebpf-node/ebpf-node/src/metrics/: mod.rs  prometheus.rs  system.rs
ebpf-node/ebpf-node/src/p2p/: behaviour.rs  event_loop.rs  gossip.rs  mod.rs  swarm.rs  sync.rs
ebpf-node/ebpf-node/src/security/: eclipse.rs  mod.rs  peer_store.rs  replay.rs  sybil.rs
ebpf-node/ebpf-node/src/tests/: mod.rs
monitoring/: docker-compose.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
monitoring/promtail/: Dockerfile.log-forwarder  ebpf-log-forwarder.py  healthcheck.sh  positions.json  promtail-config.yml  ssh-log-scraper.sh
monitoring/tempo/: tempo-config.yml
plan_mejora/: 00_EVOLUCION_ETAPAS.md  00_VISION_Y_ESTADO_ACTUAL.md
plans/: IMPLEMENTATION_REPORT.md  MEJORAS_SISTEMA_TODO.md  SECURITY-OBSERVABILITY-STRATEGIC-PLAN.md  local-lab-lxdbr1-network-validation.md
scripts/: backup.sh  configure-lxd-ports.sh  create_cluster.sh  create_node.sh  deploy.sh  install-deps.sh  live-logs.sh  restore.sh  setup_cluster.sh  test_attack.sh  test_blacklist.sh  verify-log-pipeline.sh  verify_rfc001.sh
services/: ebpf-blockchain-node1.service  ebpf-blockchain-node2.service  ebpf-blockchain-node3.service  start-local-nodes.sh  stop-local-nodes.sh
tests/: backup_test.sh
tools/ebpf-simulation/: .gitignore  Cargo.toml  nohup.out
tools/ebpf-simulation/src/: main.rs
(+61 files in other folders)
