[workspace]
resolver = "2"
members = [
    "ebpf-node",
    "ebpf-node-common",
    "ebpf-node-ebpf",
]
default-members = ["ebpf-node", "ebpf-node-common"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { version = "0.13.1" }
aya-ebpf = { version = "0.1.0" }
aya-log = { version = "0.2.1" }
aya-log-ebpf = { version = "0.1.0" }
network-types = { version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
libp2p = { version = "0.54", features = ["tcp", "dns", "quic", "gossipsub", "noise", "yamux", "kad", "identify", "macros", "tokio", "mdns", "request-response", "cbor"] }
prometheus = { version = "0.13" }
lazy_static = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rocksdb = { version = "0.21" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
anyhow = { version = "1.0" }
libc = { version = "0.2" }
which = { version = "4.0" }
axum = { version = "0.7", features = ["ws"] }
env_logger = { version = "0.10" }
log = { version = "0.4" }
aya-build = { version = "0.1.3" }
cargo_metadata = { version = "0.15" }
bincode = { version = "1.3" }
sha2 = { version = "0.10" }
ed25519-dalek = { version = "2.0" }
hex = { version = "0.4" }

[profile.release.package.ebpf-node-ebpf]
debug = 2
codegen-units = 1
