[package]
name = "ebpf-node"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"

[dependencies]
ebpf-node-common = { path = "../ebpf-node-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }
libp2p = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rocksdb = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "tracing-log", "env-filter"] }
which = { version = "4.0" }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
aya-build = { workspace = true }
which = "4.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
debug = 2
codegen-units = 1
