[package]
name = "ebpf-simulation"
version = "0.2.0"
edition = "2021"
description = "Realistic eBPF Blockchain traffic simulator with load patterns and attack simulation"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
chrono = "0.4"
